# autoprogcomp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  justfile  maketeams.py  pyproject.toml
app/: codeforces.py  logic.py  main.py  recurrent.py  settings.py  synthetic.py
config/: .env.example
typings/google_auth_oauthlib/: flow.pyi
