[project]
name = "autoprogcomp"
version = "0.1.0"
description = "Actualizar automaticamente el spreadsheet de notas del taller de progcomp"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "pyright>=1.1.396",
    "ruff>=0.11.0",
]

[tool.pyright]
include = ["app"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
pythonPlatform = "Linux"
useLibraryCodeForTypes = false
typeCheckingMode = "strict"

[tool.ruff]
include = ["pyproject.toml", "app/**/*.py"]
line-length = 120

[tool.ruff.lint]
select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I', 'RUF', 'UP']
